@@ -1,5 +1,6 @@
 ---------------------------------------------------------------------------
 Version 6.3.9  [DEVEL] 2012-04-??
+- added capability to specify substrings for field extraction mode
 - added the "jsonf" property replacer option (and fieldname)
 - bugfix: property replacer option "json" could lead to content loss
   message was truncated if escaping was necessary
